--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h2>Login</h2>
+        {$ if error $}
+              <p class="error">{{ error }}</p>
         {$ endif $}
     </body>
 </html>
