--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="UTF-8">
-        <title>Login</title>
-        <link rel="stylesheet" href="/static/style.css">
-    </head>
-    <body>
-        <h2>Login</h2>
-        {$ if error $}
-              <p class="error">{{ error }}</p>
-        {$ endif $}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Login</title>
+    <link rel="stylesheet" href="/static/style.css">
+</head>
+<body>
+    <h2>Login</h2>
+    {% if error %}
+            <p class="error">{{ error }}</p>
+    {% endif %}
+    <form method="post">
+        <label>Benutzername:</label><br>
+        <input type="text" name="username" required><br><br>
+        <label>Passwort:</label><br>
+        <input type="password" name="password" required><br><br>
+        <button type="submit">Einloggen</button>
+    </form>
+    <p>Noch keinen Account? <a href="/register">Registrieren</a></p>
+</body>
 </html>
